2009-01-29  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* src/plugins/opensubtitles/opensubtitles.py:
	Make unsensitive the treeview when you download a subtitle.
	Fixes bug #569643.

2009-01-28  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add video/x-ms-asx as a supported
	mime-type, as used on http://www.oireachtas.ie (Closes: #569483)

2009-01-23  Brian Cameron  <brian.cameron@sun.com>

	* src/eggfileformatchooser.c:  Use G_STRFUNC instead of __FUNCTION__
	so code compiles with non-gcc compilers.  Fixes bug #568511.

2009-01-22  Philip Withnall  <philip@tecnocode.co.uk>

	* src/totem-session.c (totem_session_restore): Add a check for
	filenames != NULL to totem_session_restore. (Closes: #443605)

2009-01-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_add_one_mrl):
	Don't ever use empty titles as the display name

	* src/plugins/coherence_upnp/coherence_upnp.py: Add a shadow
	around the treeview and use add_to_playlist_and_play
	for the double-click

2009-01-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: Fix retval

2009-01-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plugins/coherence_upnp/Makefile.am:
	* src/plugins/coherence_upnp/coherence_upnp.py:
	* src/plugins/coherence_upnp/coherence_upnp.totem-plugin.in:
	Add Coherence UPNP plugin from Frank Scholz

2009-01-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c (on_recent_file_item_activated):
	Don't add the recent file to the recent files list
	*again*
	* src/totem-object.c (totem_add_to_playlist_and_play):
	Don't try to play past the last item in the playlist,
	so that clicking on a menu item doesn't play the
	current file again, but the one we just added

2009-01-16  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Move burn menu item above the properties

2009-01-16  Bastien Nocera  <hadess@hadess.net>

	Patch from Philippe Rouquier <bonfire-app@wanadoo.fr> and